syntax = "proto3";
// import "google/protobuf/timestamp.proto";
package kit.iron.srv.user;

service UserSrv {
  rpc FindUserByID(QueryUserRequest) returns (UserResponse) {}
  rpc FindProfileByID(QueryProfileRequest) returns (ProfileResponse) {}
  rpc CreateUser(User) returns (Response) {}
  rpc UpdateUser(UpdateUserRequest) returns (Response) {}
  rpc FindUsers(PagerRequest) returns (UserListResponse) {}
  rpc IsUserEnabled(QueryUserRequest) returns (Response) {}

  // RegisterUserByMobile 注册一个新的用户
  rpc RegisterUserByMobile(RegisterUserRequest) returns (RegisterUserResponse) {}

  // ResetPasswordByMobile 重置密码
  rpc ResetPasswordByMobile(ResetPasswordRequest) returns (Response) {}

  rpc SigninByMobile(SigninByMobileRequest) returns (UserResponse) {}
}

message User {
  string ID = 1;
  string Username = 2;
  bool Enabled = 3;
  string SchoolID = 4;
  Profile Profile = 5;
  string CreatedAt = 6;
  string UpdatedAt = 7;
  bool Deleted = 8;
  string Password = 9;
}

message Profile {
  string ID = 11;
  string Avatar = 1;
  string Firstname = 2;
  string Lastname = 3;
  string Gender = 4;
  string Birthday = 5;
  string Nickname = 6;
  string UserID = 7;
  string Mobile = 8;
  string CreatedAt = 9;
  string UpdatedAt = 10;
}

message ResetPasswordRequest {
  string Mobile = 1;
  string MobileAreaCode = 2;
  string Code = 3;
  string Password = 4;
  string ConfirmPassword = 5;
}

message SigninByMobileRequest {
  string Mobile = 1;
  string Password = 2;
}

message RegisterUserRequest {
  string SchoolID = 1;
  string Mobile = 2;
  string Code = 3;
  string Firstname = 4;
  string Lastname = 5;
  string Password = 6;
  string ConfirmPassword = 7;
}

message RegisterUserResponse {
  User User = 1;
  bool OK = 2;
}

message Response {
  bool OK = 1;
}

message UserListResponse {
  repeated User users = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 count = 4;
}

message PagerRequest {
  int32 page = 1;
  int32 limit = 2;
  
}

message UpdateUserRequest {
  User userInfo = 1;
}

message QueryUserRequest {
  string id = 1;
}

message UserResponse {
  User user = 1;
}

message QueryProfileRequest {
  string id = 1;
}

message ProfileResponse {
  Profile profile = 1;
}

